added containerRegistry line

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,5 +25,6 @@ stages:
       inputs:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
