--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,6 +25,7 @@ stages:
       displayName: Build and push an image to container registry
       inputs:
         command: buildAndPush
+        repository: test
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
