Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,15 +18,25 @@ stages:
   jobs:  
   - job: Build
     displayName: Build
-    pool:
-      vmImage: 'ubuntu-latest'
+#    pool:
+#      vmImage: 'ubuntu-latest'
     steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: test-may-1
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+#    - task: Docker@2
+#      displayName: Build and push an image to container registry
+#      inputs:
+#        command: buildAndPush
+#        repository: test-may-1
+#        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+#        containerRegistry: $(dockerRegistryServiceConnection)
+#        tags: |
+#          $(tag)
+- task: QualysWASConnector@1
+  inputs:
+    webApplication: '121169592-BodgeIt - IP'
+    scanType: 'DISCOVERY'
+    failBySeverity5: true
+    sev5: '0'
+    failIfWasCouldNotScan: true
+    dataCheckFrequency: '5'
+    waitTimeforScanResult: '60*24'
+    WasService: 'user-quays-df46'
