--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,7 +20,7 @@ stages:
     displayName: Build
 #    pool:
 #      vmImage: 'ubuntu-latest'
-    steps:
+#    steps:
 #    - task: Docker@2
 #      displayName: Build and push an image to container registry
 #      inputs:
