--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,7 +12,7 @@ variables:
   tag: '$(Build.BuildId)'
   dockerRegistryServiceConnection: gmdavef-docker-registry-conn
   
-stages:
+#stages:
 #- stage: Build
 #  displayName: Build image
 #  jobs:  
