--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,15 +12,15 @@ variables:
   tag: '$(Build.BuildId)'
   dockerRegistryServiceConnection: gmdavef-docker-registry-conn
   
-#stages:
-#- stage: Build
-#  displayName: Build image
-#  jobs:  
-#  - job: Build
-#    displayName: Build
-#    pool:
-#      vmImage: 'ubuntu-latest'
-#    steps:
+stages:
+- stage: Build
+  displayName: Build image
+  jobs:  
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
 #    - task: Docker@2
 #      displayName: Build and push an image to container registry
 #      inputs:
