--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,23 +21,23 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps: 
-#    - task: QualysWASConnector@1
-#      displayName: Scan with WAS
-#      inputs:
-#        webApplication: '121169592-BodgeIt - IP'
-#        scanType: 'VULNERABILITY'
-#        failBySeverity5: true
-#        sev5: '0'
-#        failIfWasCouldNotScan: true
-#        dataCheckFrequency: '5'
-#        waitTimeforScanResult: '60*24'
-#        WasService: 'user-quays-df46'
-    - task: Docker@2
-      displayName: Build and push an image to container registry
+    - task: QualysWASConnector@1
+      displayName: Scan with WAS
       inputs:
-        command: buildAndPush
-        repository: test-may-1
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+        webApplication: '121169592-BodgeIt - IP'
+        scanType: 'VULNERABILITY'
+        failBySeverity5: true
+        sev5: '0'
+        failIfWasCouldNotScan: true
+        dataCheckFrequency: '5'
+        waitTimeforScanResult: '60*24'
+        WasService: 'user-quays-df46'
+#    - task: Docker@2
+#      displayName: Build and push an image to container registry
+#      inputs:
+#        command: buildAndPush
+#        repository: test-may-1
+#        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+#        containerRegistry: $(dockerRegistryServiceConnection)
+#        tags: |
+#          $(tag)
