Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -31,7 +31,7 @@ stages:
         failIfWasCouldNotScan: true
         dataCheckFrequency: '5'
         waitTimeforScanResult: '60*24'
-        WasService: 'user-quays-df46'
+        WasService: 'user-quays2ng78'
 #    - task: Docker@2
 #      displayName: Build and push an image to container registry
 #      inputs:
